<resources>
    <string name="app_name">DSA-K</string>
    <string name="app_title">
        Data Structure and
        \nAlgorithm with
        \nKotlin
    </string>
    <string name="name">Name : </string>
    <string name="create_account">Create Account</string>
    <string name="email">Email : </string>
    <string name="mobile_number">Mobile Number : </string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="new_user_register">New User?Register!</string>
    <string name="login">Login</string>
    <string name="data_structure_and_algorithms_with_kotlin">Data Structure And Algorithms with Kotlin</string>
    <string name="algorithms">Algorithms</string>
    <string name="sample">
        private val lastNode: Node?
            get() {
                var currentNode = head

                while (currentNode?.next != null)
                    currentNode = currentNode.next

                return currentNode
            }
    </string>
    <string name="singly_linked_list">Singly Linked List</string>
</resources>