<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/create_account_background"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCAName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCAEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAName" />

    <EditText
        android:id="@+id/editTextCAMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:text="@string/mobile_number"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAEmail" />

    <EditText
        android:id="@+id/editTextCAPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Password : "
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAMobileNumber" />

    <EditText
        android:id="@+id/editTextCAPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:text="Re-Password : "
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAPassword" />

    <Spinner

        android:id="@+id/spinnerCASecurityQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAPassword2" />

    <EditText
        android:id="@+id/editTextCAAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Answer : "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCASecurityQuestion" />

    <Button
        android:id="@+id/buttonCACreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background_create"
        android:text="Create Account"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:elevation="10dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCAAnswer" />

    <TextView
        android:id="@+id/textViewCAlLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="right"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCACreateAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>